# estudos_volume_rendering

./: CMakeLists.txt  copy_to_local_repo.sh
estudo_01_texture2d_oldschool/: CMakeLists.txt  Estudo01.cd  estudo01.cpp  main.cpp  matrizes.cpp  matrizes.h  teste_textura.h
estudo_02_texture3d_oldschool/: CMakeLists.txt
estudo_03_texture2d_modern/: CMakeLists.txt
estudo_04_texture3d_modern/: CMakeLists.txt  main.cpp
estudo_04_texture3d_modern/ITKIOFactoryRegistration/: itkTransformIOFactoryRegisterManager.h
textos/: 01-Um Exemplo mínimo de OpenGL moderno..rtf  renderizacao_volumetrica_usando_opengl_legacy.rtf
